# near-sandbox-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs
.github/workflows/: check-nearcore-release.yml  test.yml
examples/: create_account_and_send_near.rs  create_account_at_genesis_and_send_near.rs  create_new_account.rs  custom_config.rs  fast_forward.rs  query_default_genesis.rs  run_all.sh  singleton_sandbox.rs  state_patching.rs
src/: config.rs  error_kind.rs  lib.rs  sandbox.rs  sync.rs
src/high_level/: config.rs  mod.rs
src/runner/: cleanup.rs  mod.rs
src/sandbox/: account.rs  mod.rs  patch.rs
tests/: height_mismatch_bug.rs  patch_state_race_condition.rs
