[package]
name = "near-sandbox"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-sandbox-rs"
description = """
Library for launching NEAR sandbox environments.
"""

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["process", "net"] }
binary-install = "0.2.0"
fs2 = "0.4"
home = "0.5.5"

tempfile = "3.19"
json-patch = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
reqwest = { version = "0.12.20", default-features = false }

near-account-id = { version = "1", features = ["serde"] }
near-token = { version = "0.3", features = ["serde"] }

rand = { version = "0.8.4", optional = true }
chrono = { version = "0.4", default-features = false, features = [
    "now",
], optional = true }
ed25519-dalek = { version = "2.2.0", default-features = false, features = [
    "rand_core",
], optional = true }
bs58 = { version = "0.4.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
near-api = "0.6.1"

[features]
generate = ["rand", "chrono", "ed25519-dalek", "bs58"]
global_install = []

[patch.crates-io]
near-api = { git = "https://github.com/near/near-api-rs", branch = "sandbox-improvements" }
