[package]
name = "near-sandbox-utils"
version = "0.15.1"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/sandbox"
description = """
Utility library for launching NEAR sandbox environments.
"""

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["process"] }
binary-install = "0.4"
fs4 = "0.6"
dirs-next = { version = "2", optional = true }

[features]
global_install = ["dep:dirs-next"]
