[package]
name = "near-sandbox"
version = "0.3.6"
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-sandbox-rs"
description = """
Library for launching NEAR sandbox environments.
"""

[dependencies]
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "time",
    "process",
    "net",
    "signal",
] }
# `libc` is already pulled by `tokio`
libc = { version = "0.2", default-features = false }
binary-install = "0.4"
ureq = { version = "2", default-features = false, features = ["json"] }
fs4 = { version = "0.6", default-features = false, features = ["sync"] }
dirs-next = { version = "2", optional = true }

tempfile = { version = "3.19", default-features = false, features = [
    "getrandom",
] }
json-patch = { version = "4.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
near-account-id = { version = "2", features = ["serde"] }
near-token = { version = "0.3", features = ["serde"] }

rand = { version = "0.8.4", optional = true }
chrono = { version = "0.4", default-features = false, features = [
    "now",
], optional = true }
ed25519-dalek = { version = "2.2.0", default-features = false, features = [
    "rand_core",
], optional = true }
bs58 = { version = "0.5.0", optional = true }

[dev-dependencies]
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
near-api = "0.8"

[features]
generate = ["rand", "chrono", "ed25519-dalek", "bs58"]
global_install = ["dep:dirs-next"]
## Enables cleanup of `near-sandbox` processes stored in statics (`OnceCell`, `LazyLock`) that Rust doesn't drop on exit.
## Spawns a signal handler thread and registers an `atexit` hook. 
##
## **Skip this feature** if you use nextest or per-test sandboxes.
singleton_cleanup = []
__stress_test = ["rand"]

[[example]]
name = "singleton_sandbox"
required-features = ["singleton_cleanup"]
